@@ -1,12 +1,9 @@
 package com.eternalcode.combat.bridge.placeholder;
 
-import com.eternalcode.combat.config.implementation.PlaceholderSettings;
 import com.eternalcode.combat.config.implementation.PluginConfig;
 import com.eternalcode.combat.fight.FightManager;
 import com.eternalcode.combat.fight.FightTag;
-import com.eternalcode.combat.util.DurationUtil;
-import com.eternalcode.commons.time.DurationParser;
-import java.util.Optional;
+import com.eternalcode.combat.time.DurationFormatter;
 import me.clip.placeholderapi.expansion.PlaceholderExpansion;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.Server;
@@ -14,17 +11,19 @@ import org.bukkit.entity.Player;
 import org.bukkit.plugin.Plugin;
 import org.jetbrains.annotations.NotNull;
 
+import java.util.Optional;
+
 public class FightTagPlaceholder extends PlaceholderExpansion {
 
     private static final String IDENTIFIER = "eternalcombat";
 
-    private final PlaceholderSettings placeholderSettings;
+    private final PluginConfig config;
     private final FightManager fightManager;
     private final Server server;
     private final Plugin plugin;
 
-    public FightTagPlaceholder(PluginConfig pluginConfig, FightManager fightManager, Server server, Plugin plugin) {
-        this.placeholderSettings = pluginConfig.placeholders;
+    public FightTagPlaceholder(PluginConfig config, FightManager fightManager, Server server, Plugin plugin) {
+        this.config = config;
         this.fightManager = fightManager;
         this.server = server;
         this.plugin = plugin;
@@ -33,8 +32,7 @@ public class FightTagPlaceholder extends PlaceholderExpansion {
     @Override
     public String onRequest(OfflinePlayer player, String identifier) {
         return switch (identifier) {
-            case "remaining_millis" -> this.handleRemainingMillis(player);
-            case "remaining_seconds" -> this.handleRemainingSeconds(player);
+            case "remaining" -> this.handleRemaining(player);
             case "opponent" -> this.handleOpponent(player);
             case "opponent_health" -> this.handleOpponentHealth(player);
             case "isInCombat" -> this.handleIsInCombat(player);
@@ -43,15 +41,9 @@ public class FightTagPlaceholder extends PlaceholderExpansion {
         };
     }
 
-    private String handleRemainingMillis(OfflinePlayer player) {
+    private String handleRemaining(OfflinePlayer player) {
         return this.getFightTag(player)
-            .map(tag -> DurationParser.TIME_UNITS.format(tag.getRemainingDuration()))
-            .orElse("");
-    }
-
-    private String handleRemainingSeconds(OfflinePlayer player) {
-        return this.getFightTag(player)
-            .map(tag -> DurationUtil.format(tag.getRemainingDuration()))
+            .map(tag -> DurationFormatter.of(config.durationFormat).format(tag.getRemainingDuration()))
             .orElse("");
     }
 
@@ -73,8 +65,8 @@ public class FightTagPlaceholder extends PlaceholderExpansion {
 
     private String handleIsInCombatFormatted(OfflinePlayer player) {
         return this.isPlayerInCombat(player)
-            ? this.placeholderSettings.isInCombatFormattedTrue
-            : this.placeholderSettings.isInCombatFormattedFalse;
+            ? this.config.placeholders.isInCombatFormattedTrue
+            : this.config.placeholders.isInCombatFormattedFalse;
     }
 
     private boolean isPlayerInCombat(OfflinePlayer player) {
@@ -110,7 +102,7 @@ public class FightTagPlaceholder extends PlaceholderExpansion {
 
     @Override
     public @NotNull String getAuthor() {
-        return this.plugin.getDescription().getAuthors().get(0);
+        return this.plugin.getDescription().getAuthors().getFirst();
     }
 
     @Override
